@@ -1,5 +1,10 @@
 2009-11-04  Jason Merrill  <jason@redhat.com>
 
+	PR c++/36912
+	* g++.dg/init/static-init2.C: New.
+
+2009-11-04  Jason Merrill  <jason@redhat.com>
+
 	PR c++/35067
 	* g++.dg/abi/thunk5.C: New.
 
